# smart-assign-etl

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  azure-pipelines.yml  pyproject.toml
flowcase_etl/: make_fake_flowcase_reports.py  requirements.txt
flowcase_etl/cv_reports/Q22026/: availability_report.csv  blogs.csv  certifications.csv  courses.csv  cv_roles.csv  educations.csv  key_qualifications.csv  languages.csv  positions.csv  project_experiences.csv  sc_clearance.csv  technologies.csv  usage_report.csv  user_report.csv  work_experiences.csv
flowcase_etl/cv_reports/QTEST/: availability_report.csv  blogs.csv  certifications.csv  courses.csv  cv_roles.csv  educations.csv  key_qualifications.csv  languages.csv  positions.csv  project_experiences.csv  sc_clearance.csv  technologies.csv  usage_report.csv  user_report.csv  work_experiences.csv
flowcase_etl/src/flowcase_etl_pipeline/: cli.py  config.py  constants.py  db.py  extract.py  fake_data.py  flowcase_client.py  load.py  transform.py
flowcase_etl/src/sql/: 01_schema.sql  02_cv_search_profile_mv.sql
flowcase_etl/src/tests/: 03_cv_search_profile_qtest_mv.sql  test_cli.py  test_config.py  test_db.py  test_extract.py  test_fake_data.py  test_flowcase_client.py  test_integration_etl.py  test_load.py  test_transform.py
